# bevyjam7

./: Cargo.toml  makefile  tiled_types_export.json
game/: Cargo.toml  Trunk.toml  tiled_types_export.json
game/assets/images/: Sprite-0002.aseprite
game/assets/maps/GD/: GD tiles.tsx  pacman.tmx  rules.tmx  безымянный.tiled-project  безымянный.tiled-session  безымянный.tmx
game/assets/maps/miami/: map.tmx  miami.tsx  rules.tmx  tilemap.tmx
game/assets/maps/platformer/: map.tmx  rules.tmx  tilemap.tsx
game/assets/maps/v0.1/: map.tiled-project  map.tiled-session  map.tmx  rules.tmx  tilemap.tsx
game/assets/maps/v1.0/: p.tiled-session  pad_test.tmx  pad_test.tsx  project.tiled-session  rules.tmx  tilemap.tsx
game/assets/maps/v2.0/: autobg.tmx  main.tmx  project.tiled-project  project.tiled-session  rules.tmx
game/assets/shaders/: bg.wgsl
game/assets/sounds/: creds.txt
game/assets/sounds/platformer/: Three Red Hearts - Penguins vs Rabbits.ogg2
game/assets_raw/: canvas.ase  faz.pdn  pacman.ase  pacman.pdn  pacman2.pdn  pipes.pdn
game/src/: hints.rs  kaiv.rs  main.rs  prelude.rs  properties.rs  test.rs  yaro.rs
game/src/character/: controller.rs  mod.rs  plugin.rs  spawners.rs
game/src/core/: egui_font.rs  mod.rs  plugin.rs  states.rs
game/src/dev_games/: mod.rs  plugin.rs
game/src/dev_games/fake_end/: plugin.rs
game/src/dev_games/fnaf/: plugin.rs
game/src/dev_games/geometry_dash/: plugin.rs
game/src/dev_games/miami/: bossfight.rs  dialog.rs  entity.rs  map.rs  mod.rs  player.rs  plugin.rs  props.rs  shadows.rs  weapon.rs
game/src/dev_games/platformer/: map.rs  mod.rs  plugin.rs
game/src/fake_end/: plugin.rs
game/src/finalle/: plugin.rs
game/src/games/: mod.rs  plugin.rs
game/src/games/flappy_bird/: plugin.rs
game/src/games/fnaf/: plugin.rs
game/src/games/geometry_dash/: plugin.rs
game/src/games/miami/: mod.rs  plugin.rs
game/src/games/novel/: engine.rs  plugin.rs
game/src/games/pacman_eat/: plugin.rs
game/src/games/platformer/: mod.rs  plugin.rs
game/src/novel2fnaf/: plugin.rs
game/src/pathfinder/: plugin.rs
game/src/shaders/: bg.rs
game/src/tilemap/: plugin.rs
game/web/: index.html  style.css
libs/.dynamic/camera/: Cargo.toml
libs/.dynamic/camera/src/: lib.rs
libs/.dynamic/room/: Cargo.toml
libs/.dynamic/room/src/: lib.rs
libs/.static/bevy_ecs_tiled/assets/demo_platformer/: demo.tmx
libs/.static/bevy_ecs_tiled/assets/demo_platformer/tilesets/: ground.tsx  tiles.tsx
libs/.static/bevy_ecs_tiled/assets/maps/hexagonal/: finite_flat_top_even.tmx  finite_flat_top_odd.tmx  finite_pointy_top_even.tmx  finite_pointy_top_odd.tmx  infinite_flat_top_even.tmx  infinite_flat_top_odd.tmx  infinite_pointy_top_even.tmx  infinite_pointy_top_odd.tmx
libs/.static/bevy_ecs_tiled/assets/maps/isometric/: finite_diamond.tmx  infinite_diamond.tmx
libs/.static/bevy_ecs_tiled/assets/maps/orthogonal/: finite.tmx  finite_embedded.tmx  infinite.tmx  multiple_layers_with_colliders.tmx  multiple_tilesets.tmx
libs/.static/bevy_ecs_tiled/assets/tiles/: drjamgo_hex_16x16.tsx  kenney-sketch-desert.tsx  orthogonal_2.tsx  simple hex flat top.tsx
libs/.static/bevy_ecs_tiled/examples/: properties_basic.json  properties_basic.rs
libs/.static/bevy_ecs_tiled/src/: lib.rs  properties.rs
libs/.static/bevy_ecs_tiled/src/physics/: collider.rs  mod.rs
libs/.static/bevy_ecs_tiled/src/physics/backend/: avian.rs
libs/.static/bevy_ecs_tiled/src/tiled/: reader.rs
libs/.static/debug_utils/: Cargo.toml
libs/.static/debug_utils/src/: avian.rs  debug_overlay.rs  inspector.rs  lib.rs
libs/games/: Cargo.toml
libs/games/src/: hints.rs  lib.rs  prelude.rs  properties.rs
libs/games/src/core/: egui_font.rs  plugin.rs
libs/games/src/fake_end/: plugin.rs
libs/games/src/flappy_bird/: plugin.rs
libs/games/src/geometry_dash/: plugin.rs
libs/games/src/global_music/: plugin.rs
libs/games/src/miami/: bossfight.rs  dialog.rs  entity.rs  map.rs  mod.rs  player.rs  plugin.rs  weapon.rs
libs/games/src/novel/: engine.rs  plugin.rs
libs/games/src/pacman_eat/: plugin.rs
libs/games/src/platformer/: plugin.rs
libs/games/src/shaders/: bg.rs
libs/games/src/tilemap/: plugin.rs
libs/properties/: Cargo.toml
libs/properties/src/: lib.rs
libs/utils/: Cargo.toml
