[package]
name = "game"
version = "0.0.0-template"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["mp3", "wav", "dynamic_linking", "jpeg", "bevy_dev_tools"] }
getrandom = { version = "0.2.17", features = ["js"] }
bevy_animation.workspace = true
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy-inspector-egui.workspace = true
thiserror = "2.0.18"
tiled = "0.15.0"
avian2d = "0.5.0"
use = "0.0.1-pre.0"
kaiv_utils = { workspace = true, features = ["bevy_support"] }
properties = { version = "0.1.0", path = "../libs/properties" }
utils = { version = "0.1.0", path = "../libs/utils" }
room = { version = "0.1.0", path = "../libs/.dynamic/room" }
camera = { version = "0.1.0", path = "../libs/.dynamic/camera" }
debug_utils = { version = "0.1.0", path = "../libs/.static/debug_utils" }
bevy_asset_loader = { version = "0.25.0", features = ["2d"] }
bevy_easy_gif = "0.3.0"
rand = "0.9.2"
bevy_tweening = "0.15.0"
paste = "1.0.15"
avian3d = "0.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["file_watcher", "embedded_watcher", "wav"] }
bevy_ecs_tiled = { version = "0.11.2", path = "../libs/.static/bevy_ecs_tiled", features = ["user_properties", "avian"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["web", "wav"] }
bevy_ecs_tiled = { version = "0.11.2", path = "../libs/.static/bevy_ecs_tiled", features = ["user_properties", "wasm", "avian"] }

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[features]
default = []
kaiv = []
yaro = []

[[bin]]
name = "game"
path = "src/main.rs"
